fix letter spacing

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -19,6 +19,7 @@ html {
     font-size: 62.5%;
     font-family: $bangers;
     line-height: 1;
+    letter-spacing: 2px;
 }
 
 body {
@@ -44,6 +45,7 @@ h3 {
 
 p {
     font-family: $oswald;
+    letter-spacing: 0px;
 }
 
 // Better font rendering
